<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="30sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:background="#30ffffff"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:hint="Password"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>
    <com.google.android.material.button.MaterialButton
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="@string/log_in"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpass"
        android:layout_below="@id/loginbtn"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>
    <TextView12
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialicon"
        android:layout_centerHorizontal="true"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicon"
        android:gravity="center"
        android:layout_alignParentBottom="true">

    </LinearLayout>
</RelativeLayout>